Atualização do projeto e criação dos componentes

--- a/production/src/app/componentes/login/login.html
+++ b/production/src/app/componentes/login/login.html
@@ -24,8 +24,10 @@
         <button type="submit">Entrar</button>
 
         <a href="#" class="forgot">Esqueci minha senha</a>
-        <p class="register">Não possui conta? <a href="#">Cadastre-se</a></p>
+        <p class="register" (click)="cadastro()">Não possui conta? <a href="#">Cadastre-se</a></p>
       </form>
+
+
     </div>
   </div>
 </div>
