--- a/production/src/app/componentes/login/login.html
+++ b/production/src/app/componentes/login/login.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="slogan">
-      <p>Eficiência que <strong>transforma</strong> processos</p>
+      <p>Eficiência que <strong><br/>transforma processos</strong></p>
     </div>
   </div>
 
