--- a/production/src/styles.scss
+++ b/production/src/styles.scss
@@ -1,4 +1,12 @@
 
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
+  
+  html, body {
+    margin: 0;
+    padding: 0;
+  }
+
+
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
     --electric-violet: oklch(53.18% 0.28 296.97);
@@ -27,9 +35,7 @@
 
     --pill-accent: var(--bright-blue);
 
-    font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-      "Segoe UI Symbol";
+    font-family: 'Montserrat', sans-serif;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -42,9 +48,7 @@
     line-height: 100%;
     letter-spacing: -0.125rem;
     margin: 0;
-    font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-      "Segoe UI Symbol";
+    font-family:'Montserrat', sans-serif;
   }
 
   p {
@@ -58,7 +62,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
+    // padding: 1rem;
     box-sizing: inherit;
     position: relative;
   }
