--- a/production/src/app/componentes/login/login.html
+++ b/production/src/app/componentes/login/login.html
@@ -11,18 +11,17 @@
 
   <div class="right-section">
     <div class="login-box">
-      <h2>Boas vindas!</h2>
-      <p class="sub">Faça login</p>
+      <h2 class="sub">Boas vindas!</h2>
+      <p class="sub"><b>Faça login</b></p>
 
       <form>
-        <label for="codigo">Código de funcionário</label>
-        <input id="codigo" type="text" placeholder="Digite seu código" />
+        <label for="codigo" class="input">Código de funcionário</label>
+        <input id="codigo" type="text" placeholder="Digite seu código" class="input"/>
 
-        <label for="senha">Senha</label>
-        <input id="senha" type="password" placeholder="Digite sua senha" />
+        <label for="senha" class="input">Senha</label>
+        <input id="senha" type="password" placeholder="Digite sua senha" class="input"/>
 
-        <button type="submit">Entrar</button>
-
+        <button type="submit" (click)="telaInicial()">Entrar</button>
         <a href="#" class="forgot">Esqueci minha senha</a>
         <p class="register" (click)="cadastro()">Não possui conta? <a href="#">Cadastre-se</a></p>
       </form>
