--- a/production/src/app/componentes/login/login.scss
+++ b/production/src/app/componentes/login/login.scss
@@ -2,7 +2,8 @@
 .login-container {
   display: flex;
   height: 100vh;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Monstserrat', sans-serif;
+
 }
 
 /* Lado esquerdo */
@@ -42,12 +43,12 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 120%;
+  width: 110%;
   height: 50%;
   background-color: #a8ffee;
   // border-radius: 50%;
   // border-radius-bottom: 0;
-  border-top-right-radius: 100% 110%;
+  border-top-right-radius: 160% 230%;
   z-index: 0;
 }
 
@@ -82,7 +83,7 @@
 .login-box {
   width: 80%;
   max-width: 350px;
-  text-align: left;
+  text-align: center;
 }
 
 .login-box h2 {
@@ -123,15 +124,15 @@ button {
   padding: 10px;
   border: none;
   border-radius: 20px;
-  background-color: #a8ffee;
-  color: #084c4f;
+  background-color: #084c4f;
+  color: #ffffff;
   font-weight: 600;
   cursor: pointer;
   transition: 0.2s;
 }
 
 button:hover {
-  background-color: #8fffe0;
+  background-color: #1d7174;
 }
 
 .forgot {
@@ -154,4 +155,12 @@ button:hover {
   color: #056b6f;
   font-weight: 600;
   text-decoration: none;
+}
+
+.input{
+  text-align: left;
+}
+
+input:hover{
+  background-color:#d8f8f8
 }
