Adição de componentes (finalizada) e estruturação da validação de login.

--- a/production/src/app/componentes/login/login.html
+++ b/production/src/app/componentes/login/login.html
@@ -16,12 +16,12 @@
 
       <form>
         <label for="codigo" class="input">Código de funcionário</label>
-        <input id="codigo" type="text" placeholder="Digite seu código" class="input"/>
+        <input id="codigoFuncionario" type="text" placeholder="Digite seu código" class="input"/>
 
         <label for="senha" class="input">Senha</label>
         <input id="senha" type="password" placeholder="Digite sua senha" class="input"/>
 
-        <button type="submit" (click)="telaInicial()">Entrar</button>
+        <button type="submit" (click)="entrar()">Entrar</button>
         <a href="#" class="forgot">Esqueci minha senha</a>
         <p class="register" (click)="cadastro()">Não possui conta? <a href="#">Cadastre-se</a></p>
       </form>
